Fixed one-month calendars stretching across entire page

--- a/resources/sass/calendar/viewport.scss
+++ b/resources/sass/calendar/viewport.scss
@@ -20,7 +20,7 @@
         text-align: center;
         display: inline-flex;
         flex-direction: column;
-        flex: 1 0 85%;
+        flex: 0 0 85%;
         position: relative;
         background-color: $card-bg-color;
         border-radius: 4px;
